uploading and search behavior have been refactored to avoid delays, caused by transactional uploading and rekognition